# openvibe

./: .gitignore
cmake-modules/: FindThirdPartyEmokit.cmake  FindThirdPartyHIDAPI.cmake  FindThirdPartyLibusb-1.0.cmake  FindThirdPartyMcrypt.cmake
openvibe-applications/acquisition-server/branches/wip-emaby/: CMakeLists.txt
openvibe-applications/acquisition-server/branches/wip-jfruitet/: CMakeLists.txt
openvibe-applications/acquisition-server/branches/wip-jlegeny-settings/: CMakeLists.txt
openvibe-applications/acquisition-server/branches/wip-lbonnet-gtec/: CMakeLists.txt
openvibe-applications/acquisition-server/branches/wip-lbonnet-gtec/src/: ovas_main.cpp
openvibe-applications/acquisition-server/branches/wip-lbonnet-gtec/src/gtec-gusbamp/: ovasCDriverGTecGUSBamp.cpp  ovasCDriverGTecGUSBamp.h
openvibe-applications/acquisition-server/branches/wip-lbonnet-micromed/: CMakeLists.txt
openvibe-applications/acquisition-server/branches/wip-lmahe-settings/: CMakeLists.txt
openvibe-applications/acquisition-server/trunc/: CMakeLists.txt
openvibe-applications/acquisition-server/trunc/src/: ovasCAcquisitionServerGUI.cpp
openvibe-applications/designer/tags/wip-omk4/: CMakeLists.txt
openvibe-applications/designer/trunc/: CMakeLists.txt
openvibe-applications/external-stimulation-connection-example/trunc/: CMakeLists.txt
openvibe-applications/id-generator/trunc/: CMakeLists.txt
openvibe-applications/plugin-inspector/trunc/: CMakeLists.txt
openvibe-applications/skeleton-generator/trunc/: CMakeLists.txt
openvibe-applications/ssvep-demo/trunc/: CMakeLists.txt
openvibe-applications/vr-demo/trunc/: CMakeLists.txt
openvibe-applications/vrpn-simulator/trunc/: CMakeLists.txt
openvibe-documentation/trunc/: CMakeLists.txt
openvibe-kernel-omk/branches/wip-lmahe-mute/: CMakeLists.txt
openvibe-kernel-omk/branches/wip-lmahe-mute/share/: openvibe.conf
openvibe-kernel-omk/tags/wip-omk4/: CMakeLists.txt
openvibe-kernel-omk/trunc/: CMakeLists.txt
openvibe-modules/automaton/trunc/: CMakeLists.txt
openvibe-modules/ebml/trunc/: CMakeLists.txt
openvibe-modules/fs/trunc/: CMakeLists.txt
openvibe-modules/socket/trunc/: CMakeLists.txt
openvibe-modules/stream/trunc/: CMakeLists.txt
openvibe-modules/system/trunc/: CMakeLists.txt
openvibe-modules/xml/trunc/: CMakeLists.txt
openvibe-plugins/acquisition/trunc/: CMakeLists.txt
openvibe-plugins/classification-gpl/trunc/: CMakeLists.txt
openvibe-plugins/classification/trunc/: CMakeLists.txt
openvibe-plugins/feature-extraction/trunc/: CMakeLists.txt
openvibe-plugins/file-io/trunc/: CMakeLists.txt
openvibe-plugins/matlab/trunc/: CMakeLists.txt
openvibe-plugins/python/trunc/: CMakeLists.txt
openvibe-plugins/samples/trunc/: CMakeLists.txt
openvibe-plugins/signal-processing-gpl/trunc/: CMakeLists.txt
openvibe-plugins/signal-processing/trunc/: CMakeLists.txt
openvibe-plugins/simple-visualisation/trunc/: CMakeLists.txt
openvibe-plugins/stimulation/trunc/: CMakeLists.txt
openvibe-plugins/stream-codecs/trunc/: CMakeLists.txt
openvibe-plugins/streaming/trunc/: CMakeLists.txt
openvibe-plugins/tools/trunc/: CMakeLists.txt
openvibe-plugins/vrpn/trunc/: CMakeLists.txt
openvibe-scenarios/trunc/: CMakeLists.txt
openvibe-toolkit/trunc/: CMakeLists.txt
openvibe/tags/wip-omk4/: CMakeLists.txt
openvibe/trunc/: CMakeLists.txt
scripts/: linux-create_tag  linux-install_dependencies  win32-openvibe-x.x.x-setup.nsi
(+153 files in other folders)
